caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unclosed_struct_brace.caffeine
Blueprints
  "test" success_rate(x):
    Requiring { env: String
    signals { value: "x" }
